deployment/examples/tenant2-simulator/4-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simulator-domain-route
  labels:
    kuadrant.io/gateway: inference-gateway
spec:
  hostnames: ["${HOST}"]
  parentRefs:
  - name: inference-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: vllm-simulator-predictor
      port: 80
      weight: 100
