deployment/examples/tenant2-simulator/5-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simulator-route
spec:
  host: ${HOST}
  to:
    kind: Service
    name: inference-gateway-istio
  port:
    targetPort: 80
